# OS

./: .gitignore  CMakeLists.txt  README.md
include/: ipc.h  motor_control.h  process.h  ultrasonic_sensor.h
src/: context_switch.s  ipc.c  main.c  motor_control.c  ultrasonic_sensor.c
